src/components/FontSwitcher/FontSwitcher.module.scss
.fontSwitcher {
  display: flex;
  align-items: center;
  position: relative;

  select,
  option {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border: none;
    background-color: transparent;
    font-size: inherit;
    margin: 0;
    padding: 0.7rem 0.7rem;
    text-align: right;
    padding-right: 1.7rem;
    font-size: 0.9rem;
    font-weight: 700;
    cursor: pointer;
    color: inherit;
  }
  select:focus {
    outline: none;
  }
  select:focus-visible {
    outline: auto;
    outline: -webkit-focus-ring-color auto 1px;
  }

  label {
    cursor: pointer;
    display: flex;
    align-items: center;
  }

  .chevronIcon {
    font-size: 1.4rem;
    pointer-events: none;
    position: absolute;
    right: 0px;
    color: var(--violet);
  }
}

